[package]
name = "dekerakt-hub"
version = "0.1.0"
authors = [
  "LeshaInc <includeurl@gmail.com>",
  "Alexander (Fingercomp) <binbin226@gmail.com>"
]

[dependencies]
futures = "0.1"

tokio-core = "0.1"

slog = "1.4"
slog-scope = "0.2"
slog-term = "1.3"

unicode-width = "0.1"
byteorder = "1.0"
argparse = "0.2"

