[package]
name = "megalul"
version = "0.1.0"
authors = ["LeshaInc <includeurl@gmail.com>"]

[dependencies]
mio = "0.6"
slab = "0.3"
bytes = "0.4"
error-chain = "0.10"

number_prefix = "0.2"

slog-term = "2.0"
slog-async = "2.0"

[dependencies.slog]
version = "2.0"
features = ["max_level_trace", "release_max_level_trace"]

